--- a/libs/mediapicker/src/main/res/layout/activity_media_preview.xml
+++ b/libs/mediapicker/src/main/res/layout/activity_media_preview.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/media_tool_bar_height"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/media_tool_bar_bg" >
+        android:background="@drawable/media_tool_bar_bg">
 
         <TextView
             android:id="@+id/size_tv"
@@ -23,8 +23,8 @@
             android:layout_marginRight="16dp"
             android:gravity="center"
             android:text="218.0 MB"
-            android:textColor="@color/color6_black_normal"
-            android:textSize="16sp" />
+            android:textColor="@color/mp_btn_text_black_color_normal"
+            android:textSize="16sp"/>
 
         <CheckBox
             android:id="@+id/index_cb"
@@ -35,9 +35,9 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:button="@drawable/selector_check_bg"
-            android:text="选择"
-            android:textColor="@color/color6_black_normal"
-            android:textSize="16sp" />
+            android:text="@string/mp_choose"
+            android:textColor="@color/mp_btn_text_black_color_normal"
+            android:textSize="16sp"/>
     </RelativeLayout>
 
 </RelativeLayout>
