--- a/libs/mediapicker/src/main/res/layout/mp_activity_media_picker.xml
+++ b/libs/mediapicker/src/main/res/layout/mp_activity_media_picker.xml
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/media_tool_bar_height" >
+        android:layout_height="match_parent">
 
         <fragment
             android:id="@+id/media_fragment"
+            class="cn.iam007.mediapicker.ui.fragment.MediaFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            class="com.hello1987.mediapicker.ui.fragment.MediaFragment" />
+            android:layout_height="match_parent"/>
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/album_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#c0000000"
-        android:paddingBottom="@dimen/media_tool_bar_height"
+        android:layout_above="@+id/mp_toolbar"
+        android:background="@android:color/transparent"
         android:paddingTop="@dimen/media_tool_bar_height"
-        android:visibility="gone" >
+        android:visibility="gone">
 
         <fragment
             android:id="@+id/album_fragment"
+            class="cn.iam007.mediapicker.ui.fragment.AlbumFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            class="com.hello1987.mediapicker.ui.fragment.AlbumFragment" />
+            android:layout_height="match_parent"/>
     </FrameLayout>
 
     <RelativeLayout
+        android:id="@+id/mp_toolbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/media_tool_bar_height"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/media_tool_bar_bg" >
+        android:background="@color/mp_media_toolbar_bg_color">
 
         <TextView
             android:id="@+id/album_tv"
@@ -46,20 +46,21 @@
             android:layout_marginRight="16dp"
             android:background="@drawable/btn_spinner_bg"
             android:gravity="center"
+            android:minWidth="25dp"
             android:paddingBottom="4dp"
             android:paddingLeft="4dp"
             android:paddingRight="16dp"
             android:paddingTop="4dp"
-            android:text="图片和视频"
-            android:textColor="@color/color6_black_normal"
-            android:textSize="16sp" />
+            android:text="@string/mp_video_and_pic"
+            android:textColor="@color/mp_btn_text_color"
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="1dp"
             android:layout_height="24dp"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/preview_tv"
-            android:background="@color/color6_black_normal" />
+            android:background="@color/mp_media_toolbar_horizontal_divider"/>
 
         <TextView
             android:id="@+id/preview_tv"
@@ -69,11 +70,12 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:clickable="false"
             android:enabled="false"
             android:padding="4dp"
-            android:text="预览"
-            android:textColor="@color/color6_black_normal"
-            android:textSize="16sp" />
+            android:text="@string/mp_preview"
+            android:textColor="@color/mp_btn_text_color"
+            android:textSize="16sp"/>
     </RelativeLayout>
 
 </RelativeLayout>
