--- a/libs/mediapicker/src/main/res/values/styles.xml
+++ b/libs/mediapicker/src/main/res/values/styles.xml
@@ -1,16 +1,10 @@
 <resources>
 
-    <style name="AppBaseTheme" parent="android:Theme.Light"></style>
+    <style name="MediaPickerBaseTheme" parent="AppTheme.Base"></style>
 
-    <style name="AppTheme" parent="AppBaseTheme"></style>
-
-    <style name="AppTheme.ActionBar">
-        <item name="android:windowContentOverlay">@null</item>
+    <style name="MediaPickerTheme" parent="MediaPickerBaseTheme">
         <item name="android:dividerVertical">@android:color/transparent</item>
         <item name="android:dividerHorizontal">@android:color/transparent</item>
-        <item name="android:actionBarStyle">@style/MyActionBarStyle</item>
-        <item name="android:actionDropDownStyle">@style/MyDropDownNav</item>
-        <item name="android:actionMenuTextAppearance">@style/OctopusMenuTittleStyle</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_home_up_black</item>
     </style>
 
@@ -31,7 +25,7 @@
     </style>
 
     <style name="MyTitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title.Inverse">
-        <item name="android:textColor">@color/color6_black_normal</item>
+        <item name="android:textColor">@color/mp_btn_text_black_color_normal</item>
         <item name="android:textSize">16sp</item>
     </style>
 
