--- a/libs/mediapicker/src/main/res/layout/fragment_media.xml
+++ b/libs/mediapicker/src/main/res/layout/fragment_media.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+<GridView
     android:id="@+id/media_grid_view"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color8_white_normal"
+    android:background="@color/mp_black_bg"
     android:choiceMode="multipleChoice"
     android:clipToPadding="true"
     android:columnWidth="100dp"
+    android:descendantFocusability="blocksDescendants"
     android:gravity="center"
-    android:horizontalSpacing="@dimen/media_item_horizontal_spacing"
+    android:horizontalSpacing="@dimen/mp_media_item_horizontal_spacing"
     android:listSelector="@android:color/transparent"
     android:numColumns="3"
     android:scrollbarStyle="outsideOverlay"
     android:stretchMode="columnWidth"
-    android:verticalSpacing="@dimen/media_item_vertical_spacing" />
+    android:verticalSpacing="@dimen/mp_media_item_vertical_spacing"/>
