--- a/libs/mediapicker/src/main/res/layout/mp_media_item.xml
+++ b/libs/mediapicker/src/main/res/layout/mp_media_item.xml
@@ -1,30 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/color9_white_normal" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/mp_media_item_white_bg">
 
     <ImageView
         android:id="@+id/photo_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:contentDescription="@string/app_name"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"/>
 
-    <CheckedTextView
+    <View
+        android:id="@+id/checked_mask"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/mp_media_item_checked_mask"
+        android:visibility="invisible"/>
+
+    <CheckBox
         android:id="@+id/index_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:checkMark="@drawable/selector_check_bg" />
+        android:checked="false"
+        android:focusable="false"
+        android:paddingBottom="15dp"/>
 
     <RelativeLayout
         android:id="@+id/video_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#c0000000" >
+        android:background="#c0000000">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -34,7 +43,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/ic_media_video" />
+            android:src="@drawable/ic_media_video"/>
 
         <TextView
             android:id="@+id/size_tv"
@@ -45,8 +54,8 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:text="2.0 MB"
-            android:textColor="@color/color9_white_normal"
-            android:textSize="14sp" />
+            android:textColor="@color/mp_btn_text_white_color_normal"
+            android:textSize="14sp"/>
     </RelativeLayout>
 
 </RelativeLayout>
